[project]
name = "dashb"
version = "0.1.0"
description = ""
authors = [
    {name = "j0cmd",email = "jomaiaaraujo@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "streamlit (>=1.41.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
